sass/includes/_card-groups.scss
.card-group {
    padding-left: 0;
    display: flex;
    flex-wrap: wrap;
    width: 100%;

    &--list-style-none {
        @extend .card-group;
        list-style: none;
    }

    &--no-flex {
        @extend .card-group;
        display: block;
        flex-wrap: unset;
    }

    &-secondary-nav {
        display: inline-block;
        width: 100%;

        &__image-link {
            @extend .tna-card__link;
            @include explorer-link;
        }

        &__title-label {
            color: $color__grey-700;
            font-family: $font__roboto-mono;
            // TODO: update global font sizes to match new style guide
            margin-bottom: 0rem;
            margin-top: 1.05rem;
            text-transform: uppercase;
            font-size: 0.875rem;

            @media only screen and (min-width: $screen__md) {
                font-size: 0.9rem;
            }
        }

        &__title-link {
            font-family: $font__body;
            font-weight: $font-weight-bold;
            font-size: 1.125rem;
            display: inline;
            color: $color__black;
            text-decoration-thickness: 1px;

            @media only screen and (min-width: $screen__md) {
                font-size: 1.25rem;
            }

            &:hover,
            &:active {
                color: $color__navy;
            }

            &:visited {
                color: $color__black;
            }

            &:focus {
                outline-offset: 0.2rem;
            }
        }

        &__heading {
            display: block;
            margin-top: 0.3rem;
            margin-bottom: 0.5rem;

            span {
                background: green;
                display: inline-block;
                font-size: 0.8rem;
                color: white;
                padding: 2px 3px 0px 3px;
                margin-left: 1px;
                vertical-align: middle;
            }
        }

        &__image {
            @extend .tna-card__image;

            &-fallback {
                width: 100%;
            }
        }

        &__body {
            color: $color__grey-700;
            padding-left: 0.28rem;
            padding-right: 0.28rem;
            padding-top: 0.28rem;
        }

        &__span {
            display: block;
        }

        @media only screen and (min-width: $screen__lg) {
            display: block;
        }
    }

    &-record-summary {
        list-style: none;
        display: inline-block;
        width: 100%;
        margin-bottom: 2rem;
        &__image {
            @extend .tna-card__image;
            border: 0.0625rem solid $color__black;
            margin-top: 0.7rem;
            &-fallback {
                width: 100%;
            }
            &:hover {
                outline: 0.313rem solid $color__black;
            }
        }

        &__link {
            @extend .tna-card__link;
            display: inline-block;
            color: $color__navy;
            text-decoration: underline;
            margin-left: 0.5rem;
            &:active {
                color: $color__navy;
            }
            &:hover {
                color: $color__navy;
                text-decoration: none;
            }
            &:focus {
                outline-offset: 0.2rem;
            }
        }

        &__heading {
            font-size: 1.3rem;
            font-weight: 700;
            display: inline;
        }
    }

    &-promo {
        list-style: none;
        padding: 1rem;
        margin-bottom: 1rem;
        width: 100%;
        &--green {
            @extend .card-group-promo;
            background-color: $color__pastel-green;
            color: $color__black;
            padding: 1rem 2rem;

            a,
            hr {
                color: $color__black;
            }
        }

        &--dark {
            @extend .card-group-promo;
            background-color: $color__grey-700;
            color: $color__white;
            padding: 1rem 2rem;

            a,
            hr {
                color: $color__white;
            }
        }

        &__card {
            &-image {
                width: 100%;
                margin-top: 1rem;
                margin-bottom: 1rem;
                display: block;
            }

            &-heading {
                font-weight: 800;
                font-size: 1.5rem;
            }

            &-paragraph {
                margin-bottom: 1rem;
            }

            &-list {
                padding-left: 1rem;
                margin-bottom: 1rem;
                &-item {
                    list-style-type: "- ";
                }
            }

            &-link {
                display: block;
            }
        }

        &__heading {
            margin: 0;
        }
    }
}

.aria-desc-card {
    display: none;
}

